RESOLVED FIXED58948
[chromium] DrawingBuffer incorrectly initializes value before getBooleanv call
https://bugs.webkit.org/show_bug.cgi?id=58948
Summary [chromium] DrawingBuffer incorrectly initializes value before getBooleanv call
Adrienne Walker
Reported 2011-04-19 17:27:24 PDT
DrawingBuffer::clearFramebuffer() initializes the depthMask to true before calling getBooleanv. In the command buffer code (gpu/command_buffer/client/gles2_c_lib_autogen.h:315), we check that the destination for all get calls has been correctly initialized, which means that it's either been initialized to 0 or -1. See the macro in gles2_c_lib.cc:33. This should probably be initialized to false instead for consistency. This asserts when loading http://www.masterofthewebgame.com on Linux (only platform tested) at ToT (chromium r82193, webkit r84319). (See also: probably would have been caught if the command buffer was tested in DRT.)
Attachments
Patch (1.56 KB, patch)
2011-04-19 17:31 PDT, Adrienne Walker
kbr: review+
Adrienne Walker
Comment 1 2011-04-19 17:31:43 PDT
Stephen White
Comment 2 2011-04-19 17:38:04 PDT
Comment on attachment 90279 [details] Patch If a C++-style bool is the wrong type for this call, should this perhaps be 0 instead of false? Otherwise, looks good to me (unofficially).
Kenneth Russell
Comment 3 2011-04-19 17:43:04 PDT
Comment on attachment 90279 [details] Patch Argh. Looks fine.
Adrienne Walker
Comment 4 2011-04-19 17:51:52 PDT
Note You need to log in before you can comment on or make changes to this bug.