2011-04-19  Adrienne Walker  <enne@google.com>

Reviewed by Kenneth Russell.

        [chromium] Initialize depth mask to known value before getBooleanv call
        https://bugs.webkit.org/show_bug.cgi?id=58948

        This trips an assert in the GPU command buffer client code if the
        pointed-to value is not initialized to 0 or -1.

        * platform/graphics/gpu/DrawingBuffer.cpp:
        (WebCore::DrawingBuffer::clearFramebuffer):

Canonical link: https://commits.webkit.org/74063@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84323 268f45cc-cd09-0410-ab3c-d52691b4dbfc